Java 25 and Spring Boot 4 upgrade